# cpp-shared-ref

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
src/cpp_shared_ref/: memory.hpp  shared_ref.hpp  version.hpp  weak_ref.hpp
src/cpp_shared_ref/internal/: control_block.hpp
src/shared_pointer/: shared_pointer.hpp
src/shared_pointer/internal/: control_block.hpp  shared_pointer_impl.hpp  version.hpp  weak_pointer.hpp
src/shared_pointer/parts/: shared_ref.hpp  version.hpp  weak_ref.hpp
src/shared_pointer/parts/internal/: control_block.hpp
src/shared_ref/: shared_ref.hpp  version.hpp  weak_ref.hpp
src/shared_ref/internal/: control_block.hpp
tests/: CMakeLists.txt  main.cpp  shared_ref.cpp  types.hpp  weak_ref.cpp
tests/perf/: CMakeLists.txt
tests/perf/memory/: CMakeLists.txt  shared_ptr.cpp  shared_ref.cpp
tests/perf/memory/saved/: massif_shared_ref.txt  profile_massif_shared_ptr.txt  profile_massif_shared_ref_old.txt
tests/perf/speed/: CMakeLists.txt  main.cpp
tests/perf/speed/saved/: asus_shared_ptr.txt  asus_shared_ref.txt  profile_speed_lenovo_shared_ref.txt
tests/unit/: CMakeLists.txt  enable_shared_from_this.cpp  owner_less.cpp  shared_ref.cpp  types.hpp  weak_ref.cpp
